--- a/src/index.scss
+++ b/src/index.scss
@@ -3,12 +3,15 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 
 $primary-background: #1d1d1d;
-$secondary : #630102;
+$secondary: #630102;
 body {
   background: $primary-background;
   .App-header {
     background: $primary-background;
     position: relative;
+    .navbar-brand img{
+      max-height: 75px;
+    }
     img {
       max-width: 100%;
       height: auto;
@@ -144,6 +147,19 @@ button.harmburger {
 
 .modal {
   font-family: "Roboto";
+  &.offer-modal {
+    .modal-header {
+      padding: 0px;
+      .btn-close {
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        background-color: #fff;
+        z-index: 9;
+        opacity: 1;
+      }
+    }
+  }
 }
 .productlist {
   background-image: url(../public/assets/trans-texture.jpg);
@@ -151,17 +167,17 @@ button.harmburger {
   padding: 20px 10px 20px;
   .showcase {
     text-align: center;
-    
+
     border: 1px solid #d5cdcd;
     margin-bottom: 20px;
     background: #1d1d1d;
     color: #fff;
     figure {
-      img{
-        max-width:100%;
+      img {
+        max-width: 100%;
       }
     }
-    .desc{
+    .desc {
       padding: 20px;
     }
     h2 {
@@ -181,30 +197,29 @@ button.harmburger {
       transition: all 0.5s;
       line-height: 20px;
       border-radius: 3px;
-      width:200px;
-      &:hover{
-        background:$secondary; 
-        border-color:$secondary; 
+      width: 200px;
+      &:hover {
+        background: $secondary;
+        border-color: $secondary;
       }
     }
   }
 }
 
-.dropdown{
-  &.customized{
-    button{
+.dropdown {
+  &.customized {
+    button {
       background-color: transparent;
-      border:none;
+      border: none;
       padding: 0;
-      &:after{
+      &:after {
         display: none;
       }
       &.btn-success {
-        &.dropdown-toggle{
+        &.dropdown-toggle {
           background-color: transparent !important;
         }
       }
-
     }
   }
 }
