--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,23 @@
 @import "~bootstrap/scss/bootstrap";
 @import url("https://fonts.googleapis.com/css?family=Lobster");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@100;300;400;500;700;800;900&display=swap");
 
 $primary-background: #1d1d1d;
-$secondary: #630102;
+$secondary: #782020;
 body {
   background: $primary-background;
   .App-header {
     background: $primary-background;
     position: relative;
-    .navbar-brand img{
-      max-height: 75px;
+    .navbar > .container {
+      justify-content: flex-end;
+    }
+    .navbar-brand {
+      margin-right: auto;
+      img {
+        max-height: 75px;
+      }
     }
     img {
       max-width: 100%;
@@ -205,9 +212,54 @@ button.harmburger {
     }
   }
 }
-
+.cart-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background: $primary-background;
+  figure {
+    margin-bottom: 0px;
+    img {
+      max-height: 100px;
+    }
+  }
+  .form-control {
+    max-width: 40px;
+  }
+  .cart-info {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    padding: 10px;
+    span {
+      font-size: 14px;
+      color: #fff;
+    }
+  }
+  .del-cart {
+    width: 24px;
+    height: 24px;
+    border: none;
+    background-position: center;
+    color: #1d1d1d;
+    background: transparent;
+    filter: brightness(12.5) contrast(2.5) invert(1);
+    padding: 0px;
+    img {
+      max-width: 24px;
+    }
+  }
+  &:hover {
+    background-color: $secondary;
+  }
+}
 .dropdown {
   &.customized {
+    .dropdown-menu[data-bs-popper] {
+      right: 0px;
+      left: inherit;
+    }
     button {
       background-color: transparent;
       border: none;
@@ -217,9 +269,90 @@ button.harmburger {
       }
       &.btn-success {
         &.dropdown-toggle {
+          &:focus {
+            box-shadow: none;
+            outline: none;
+          }
           background-color: transparent !important;
         }
       }
     }
+
+    .cart-drp {
+      min-width: 320px;
+      padding: 0px;
+      background: $primary-background;
+      box-shadow: 0px 1px 5px 0px #747474;
+      span {
+        color: #fff;
+      }
+      .cart-list {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        figure {
+          max-width: 30%;
+          margin-bottom: 0px;
+        }
+        .cart-info {
+          display: flex;
+          flex-direction: column;
+          width: 70%;
+          padding: 10px;
+          span {
+            font-size: 14px;
+            color: #fff;
+          }
+        }
+        .del-cart {
+          width: 24px;
+          height: 24px;
+          border: none;
+          background-color: #fff;
+          background-position: center;
+          color: $primary-background;
+          filter: brightness(12.5) contrast(2.5) invert(1);
+          padding: 0px;
+          img {
+            max-width: 24px;
+          }
+        }
+        &:hover {
+          background-color: $secondary;
+        }
+      }
+      .gocart {
+        background: #fff;
+        padding: 5px 20px;
+        width: calc(100% - 20px);
+        margin: 10px;
+        color: $primary-background;
+        &:hover {
+          background-color: $secondary;
+          color: #fff;
+        }
+      }
+    }
+  }
+}
+.checkout-btn {
+  background: #fff;
+  padding: 5px 20px;
+  width: 100%;
+  color: #1d1d1d;
+  margin-bottom: 10px;
+}
+.summary {
+  background: $primary-background;
+  .wrap {
+    padding: 10px 0 0;
+  }
+  span {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 10px;
   }
 }
