--- a/src/index.scss
+++ b/src/index.scss
@@ -31,12 +31,48 @@ body {
     }
   }
 }
+.h-70{
+  height: 70vh;
+}
 h2{
   &.blend-title{
     margin-bottom: 30px;
     color: #e67437;
     font-family: "Teko", sans-serif;
     margin-top: 20px;
+  }
+}
+.contact {
+  .br-box{
+    border: 1px solid #1d1d1d;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+  }
+  p{
+    a{
+      color: #e67437;
+    }
+  }
+}
+footer{
+  padding: 10px 0;
+  .nav-link{
+    color: #fff;
+    text-transform: uppercase;
+    &:hover{
+      color:#9d9d9d;
+    }
+  }
+  p{
+    &.copy{
+      color: #9d9d9d;
+      font-size:14px;
+    }
   }
 }
 .menu {
@@ -220,6 +256,7 @@ button.harmburger {
   background-image: url(../public/assets/trans-texture.jpg);
   background-size: cover;
   padding: 20px 10px 20px;
+  min-height:70vh;
 }
 .productlist {
   @extend .base-bg;
